--- a/Homework16/app/build.gradle
+++ b/Homework16/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.google.android.material:material:1.5.0-alpha04'
+    implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
+    implementation 'com.hannesdorfmann:adapterdelegates4:4.3.0'
 }
