--- a/ListHomework/app/build.gradle
+++ b/ListHomework/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -45,4 +46,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0-alpha04'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation "androidx.lifecycle:lifecycle-common-java8:2.3.1"
+    implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
+    implementation 'com.hannesdorfmann:adapterdelegates4:4.3.0'
 }
