--- a/Retrofit/app/build.gradle
+++ b/Retrofit/app/build.gradle
@@ -47,7 +47,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -75,14 +75,13 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.0"
 
     //Moshi
-    def moshiVersion = '1.9.3'
+    def moshiVersion = '1.12.0'
 
     implementation "com.squareup.moshi:moshi:$moshiVersion"
     implementation "com.squareup.moshi:moshi-kotlin:$moshiVersion"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshiVersion"
 
     //Retrofit
-
     def retrofitVersion = '2.9.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
@@ -92,5 +91,7 @@ dependencies {
     //AppAuth
     implementation 'net.openid:appauth:0.7.1'
 
-
+    //Coroutines
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
 }
